--- a/k8s/timeweb-deploy.yaml
+++ b/k8s/timeweb-deploy.yaml
@@ -19,8 +19,8 @@ data:
   DATABASE_URL: "postgresql://pyland_prod_user:VXR8K9mN2pL5vT3wQ7jH6fY4nB1xC0eD8sA5kU9rM3g=@postgres-service:5432/pyland_db"
   REDIS_URL: "redis://redis-service:6379/0"
   CELERY_BROKER_URL: "redis://redis-service:6379/0"
+  CELERY_RESULT_BACKEND: "redis://redis-service:6379/0"
   SITE_URL: "http://pyland.ru"
-  # Email settings (using console backend for now - configure SMTP later)
   EMAIL_BACKEND: "django.core.mail.backends.console.EmailBackend"
   EMAIL_HOST: "smtp.gmail.com"
   EMAIL_PORT: "587"
@@ -222,6 +222,11 @@ spec:
             configMapKeyRef:
               name: django-config
               key: CELERY_BROKER_URL
+        - name: CELERY_RESULT_BACKEND
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: CELERY_RESULT_BACKEND
         livenessProbe:
           httpGet:
             path: /api/ping
@@ -310,6 +315,11 @@ spec:
             configMapKeyRef:
               name: django-config
               key: CELERY_BROKER_URL
+        - name: CELERY_RESULT_BACKEND
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: CELERY_RESULT_BACKEND
         resources:
           requests:
             memory: "256Mi"
@@ -369,6 +379,11 @@ spec:
             configMapKeyRef:
               name: django-config
               key: CELERY_BROKER_URL
+        - name: CELERY_RESULT_BACKEND
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: CELERY_RESULT_BACKEND
         resources:
           requests:
             memory: "64Mi"
