feat: Add SMTP email configuration with Gmail support
- Change EMAIL_BACKEND from console to smtp in ConfigMap
- Add EMAIL_HOST_USER and EMAIL_HOST_PASSWORD to Secret (empty for security)
- Add email environment variables to web and celery-worker deployments
- Create EMAIL_SMTP_SETUP.md with complete setup instructions
- Includes Gmail App Password generation guide
- Includes troubleshooting section

--- a/k8s/timeweb-deploy.yaml
+++ b/k8s/timeweb-deploy.yaml
@@ -29,11 +29,13 @@ data:
   CELERY_BROKER_URL: "redis://redis-service:6379/0"
   CELERY_RESULT_BACKEND: "redis://redis-service:6379/0"
   SITE_URL: "http://pyland.ru"
-  EMAIL_BACKEND: "django.core.mail.backends.console.EmailBackend"
+  EMAIL_BACKEND: "django.core.mail.backends.smtp.EmailBackend"
   EMAIL_HOST: "smtp.gmail.com"
   EMAIL_PORT: "587"
   EMAIL_USE_TLS: "True"
   DEFAULT_FROM_EMAIL: "noreply@pyland.ru"
+  EMAIL_HOST_USER: ""
+  EMAIL_HOST_PASSWORD: ""
 
 ---
 apiVersion: v1
@@ -46,6 +48,11 @@ stringData:
   SECRET_KEY: "django-prod-$ecure-k3y-7x9z!a2c#d4f%g6h*j8k(m0n)p1q=r3t+u5w-v7y"
   POSTGRES_USER: "pyland_prod_user"
   POSTGRES_PASSWORD: "VXR8K9mN2pL5vT3wQ7jH6fY4nB1xC0eD8sA5kU9rM3g="
+  # IMPORTANT: Add your Gmail credentials here
+  # Get App Password: https://myaccount.google.com/apppasswords
+  # Example:
+  # EMAIL_HOST_USER: "your-email@gmail.com"
+  # EMAIL_HOST_PASSWORD: "your-app-password-here"
 
 ---
 # PostgreSQL Deployment
@@ -275,6 +282,43 @@ spec:
             configMapKeyRef:
               name: django-config
               key: CELERY_RESULT_BACKEND
+        - name: EMAIL_BACKEND
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_BACKEND
+        - name: EMAIL_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_HOST
+        - name: EMAIL_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_PORT
+        - name: EMAIL_USE_TLS
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_USE_TLS
+        - name: DEFAULT_FROM_EMAIL
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: DEFAULT_FROM_EMAIL
+        - name: EMAIL_HOST_USER
+          valueFrom:
+            secretKeyRef:
+              name: django-secret
+              key: EMAIL_HOST_USER
+              optional: true
+        - name: EMAIL_HOST_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: django-secret
+              key: EMAIL_HOST_PASSWORD
+              optional: true
         livenessProbe:
           httpGet:
             path: /api/ping
@@ -368,6 +412,43 @@ spec:
             configMapKeyRef:
               name: django-config
               key: CELERY_RESULT_BACKEND
+        - name: EMAIL_BACKEND
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_BACKEND
+        - name: EMAIL_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_HOST
+        - name: EMAIL_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_PORT
+        - name: EMAIL_USE_TLS
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: EMAIL_USE_TLS
+        - name: DEFAULT_FROM_EMAIL
+          valueFrom:
+            configMapKeyRef:
+              name: django-config
+              key: DEFAULT_FROM_EMAIL
+        - name: EMAIL_HOST_USER
+          valueFrom:
+            secretKeyRef:
+              name: django-secret
+              key: EMAIL_HOST_USER
+              optional: true
+        - name: EMAIL_HOST_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: django-secret
+              key: EMAIL_HOST_PASSWORD
+              optional: true
         resources:
           requests:
             memory: "256Mi"
