--- a/k8s/timeweb-deploy.yaml
+++ b/k8s/timeweb-deploy.yaml
@@ -33,7 +33,7 @@ data:
   EMAIL_HOST: "smtp.gmail.com"
   EMAIL_PORT: "587"
   EMAIL_USE_TLS: "True"
-  DEFAULT_FROM_EMAIL: "noreply@pyland.ru"
+  DEFAULT_FROM_EMAIL: "PyLand <limpoposiki@gmail.com>"
   EMAIL_HOST_USER: ""
   EMAIL_HOST_PASSWORD: ""
 
@@ -48,11 +48,9 @@ stringData:
   SECRET_KEY: "django-prod-$ecure-k3y-7x9z!a2c#d4f%g6h*j8k(m0n)p1q=r3t+u5w-v7y"
   POSTGRES_USER: "pyland_prod_user"
   POSTGRES_PASSWORD: "VXR8K9mN2pL5vT3wQ7jH6fY4nB1xC0eD8sA5kU9rM3g="
-  # IMPORTANT: Add your Gmail credentials here
-  # Get App Password: https://myaccount.google.com/apppasswords
-  # Example:
-  # EMAIL_HOST_USER: "your-email@gmail.com"
-  # EMAIL_HOST_PASSWORD: "your-app-password-here"
+  # PRODUCTION: Add your real Gmail credentials here before deploying
+  EMAIL_HOST_USER: "your-email@gmail.com"
+  EMAIL_HOST_PASSWORD: "your-app-password-here"
 
 ---
 # PostgreSQL Deployment
