--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = [
     {name = "masliaevdmitrii@gmail.com"}
 ]
-license = {text = "MIT"}
+license = {text = "Proprietary"}
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
