--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,8 @@ dev = [
     "bandit[toml] (>=1.8.0,<2.0.0)",
     "radon (>=6.0.0,<7.0.0)",
     "pre-commit (>=4.0.0,<5.0.0)",
-    "django-upgrade (>=1.22.0,<2.0.0)"
+    "django-upgrade (>=1.22.0,<2.0.0)",
+    "polib (>=1.2.0,<2.0.0)"
 ]
 [tool.ruff]
 line-length = 100
