--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
     "sentry-sdk[django] (>=2.43.0,<3.0.0)",
     "psycopg[binary] (>=3.2.0,<4.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "whitenoise (>=6.11.0,<7.0.0)"
+    "whitenoise (>=6.11.0,<7.0.0)",
+    "django-modeltranslation (>=0.19.19,<0.20.0)"
 ]
 
 [build-system]
