--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,9 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "whitenoise (>=6.11.0,<7.0.0)",
     "django-modeltranslation (>=0.19.19,<0.20.0)",
-    "reportlab (>=4.4.9,<5.0.0)"
+    "reportlab (>=4.4.9,<5.0.0)",
+    "pypdf2 (>=3.0.1,<4.0.0)",
+    "qrcode (>=8.2,<9.0)"
 ]
 
 [build-system]
