--- a/k8s/timeweb-deploy.yaml
+++ b/k8s/timeweb-deploy.yaml
@@ -33,7 +33,7 @@ data:
   EMAIL_HOST: "smtp.gmail.com"
   EMAIL_PORT: "587"
   EMAIL_USE_TLS: "True"
-  DEFAULT_FROM_EMAIL: "PyLand <limpoposiki@gmail.com>"
+  DEFAULT_FROM_EMAIL: "PyLand <pylandschool@gmail.com>"
   EMAIL_HOST_USER: ""
   EMAIL_HOST_PASSWORD: ""
 
