--- a/nginx/systemd/pyland-celery-beat.service
+++ b/nginx/systemd/pyland-celery-beat.service
@@ -13,12 +13,12 @@ User=pyland
 Group=www-data
 
 # Переменные окружения
-Environment="PATH=/opt/pyland/.venv/bin"
+Environment="PATH=/opt/pyland/backend/.venv/bin"
 Environment="DJANGO_SETTINGS_MODULE=pyland.settings"
 EnvironmentFile=/opt/pyland/backend/.env
 
 # Команда запуска Celery Beat
-ExecStart=/opt/pyland/.venv/bin/celery -A pyland beat \
+ExecStart=/opt/pyland/backend/.venv/bin/celery -A pyland beat \
     --loglevel=info \
     --logfile=/opt/pyland/backend/logs/celery-beat.log \
     --pidfile=/var/run/celery/beat.pid \
