feat: Конфигурация k8s через .env + автообновление API сервера
- Добавлены переменные в .env: K8S_API_SERVER, K8S_NAMESPACE, DOCKER_IMAGE, DOCKER_TAG, KUBECONFIG
- deploy.sh теперь загружает конфигурацию из .env
- Автоматическое обновление IP в kubeconfig при изменении K8S_API_SERVER
- Новый IP кластера: 72.56.105.54
- Улучшен вывод информации о деплое

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,10 @@ CACHE_TTL_ARTICLE_LIST=300
 CACHE_TTL_ARTICLE_DETAIL=900
 CACHE_TTL_CATEGORY_LIST=1800
 CACHE_TTL_STATS=600
+
+# Kubernetes Configuration (for deployment)
+K8S_API_SERVER=72.56.105.54
+K8S_NAMESPACE=pyland
+DOCKER_IMAGE=ghcr.io/ps965xx7vn-lgtm/backend
+DOCKER_TAG=production
+KUBECONFIG=~/.kube/timeweb-config
