--- a/k8s/timeweb-deploy.yaml
+++ b/k8s/timeweb-deploy.yaml
@@ -503,5 +503,12 @@ spec:
             configMapKeyRef:
               name: django-config
               key: DATABASE_URL
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "50m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
       restartPolicy: OnFailure
   backoffLimit: 3
